--- a/BERT와 BART.ipynb
+++ b/BERT와 BART.ipynb
@@ -5,7 +5,7 @@
    "id": "7a839f56",
    "metadata": {},
    "source": [
-    "- 이 문서는 아래의 주소의 pdf에서 내용을 발췌하여 만들어 졌습니다.\n",
+    "- 이 문서는 아래의 주소의 pdf에서 내용을 참고하여 만들어 졌습니다.\n",
     "- https://github.com/KPFBERT/kpfbert/blob/main/BERT-MediaNavi.pdf"
    ]
   },
